--- a/gofreight_december_2025_report.html
+++ b/gofreight_december_2025_report.html
@@ -1388,6 +1388,22 @@
                                 <td>3.7</td>
                                 <td>&#128230; Terminal</td>
                             </tr>
+                            <tr style="background-color: #f0f9ff; font-weight: bold; border-top: 2px solid #01aac1;">
+                                <td colspan="2" style="text-align: right;">Top 12 Subtotal</td>
+                                <td>1,929</td>
+                                <td>2,022</td>
+                                <td class="trend-down">-93</td>
+                                <td>—</td>
+                                <td>—</td>
+                            </tr>
+                            <tr style="background-color: #e8f5e9; font-style: italic;">
+                                <td colspan="2" style="text-align: right;">% of Total (2,352 clicks)</td>
+                                <td>82.0%</td>
+                                <td>89.8%</td>
+                                <td>—</td>
+                                <td>—</td>
+                                <td>—</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -1512,6 +1528,16 @@
                                 <td>24</td>
                                 <td class="trend-up">New &#9650;</td>
                                 <td><a href="https://gofreight.com/" target="_blank" style="color: #01aac1; text-decoration: none;">gofreight.com/</a></td>
+                            </tr>
+                            <tr style="background-color: #f0f9ff; font-weight: bold; border-top: 2px solid #01aac1;">
+                                <td style="text-align: right;">Total Search Volume</td>
+                                <td>3,990</td>
+                                <td colspan="4">—</td>
+                            </tr>
+                            <tr style="background-color: #e8f5e9; font-style: italic;">
+                                <td style="text-align: right;">Keywords Ranking (Dec)</td>
+                                <td>9 of 11</td>
+                                <td colspan="4">81.8% coverage of tracked keywords</td>
                             </tr>
                         </tbody>
                     </table>
