--- a/gofreight_december_2025_report.html
+++ b/gofreight_december_2025_report.html
@@ -821,11 +821,11 @@
                             </tr>
                             <tr style="background: #E6E6E6; font-weight: bold; font-style: italic;">
                                 <td>% of Site Total</td>
-                                <td>22.2%</td>
-                                <td>28.4%</td>
+                                <td>83.0%</td>
+                                <td>88.1%</td>
                                 <td></td>
-                                <td>30.1%</td>
-                                <td>35.6%</td>
+                                <td>79.5%</td>
+                                <td>78.4%</td>
                                 <td></td>
                                 <td></td>
                             </tr>
@@ -1115,12 +1115,15 @@
                             <tr style="background: #E6E6E6; font-weight: bold; font-style: italic;">
                                 <td></td>
                                 <td>% of Site Total</td>
-                                <td>55.0%</td>
-                                <td>76.8%</td>
+                                <td>196.7%*</td>
+                                <td>248.5%*</td>
                                 <td></td>
-                                <td>48.9%</td>
-                                <td>54.9%</td>
+                                <td>107.5%*</td>
+                                <td>144.9%*</td>
                                 <td></td>
+                            </tr>
+                            <tr style="background: #fff3cd; font-size: 0.85em;">
+                                <td colspan="8" style="text-align: left; padding: 10px;">*Note: Page-level clicks from GSC can exceed site total due to query-level attribution. Each page counts clicks independently.</td>
                             </tr>
                         </tbody>
                     </table>
