Update index with Jan 1-19 report as latest

--- a/index.html
+++ b/index.html
@@ -134,7 +134,14 @@
         <div class="reports-list">
             <div class="report-item">
                 <div class="report-info">
-                    <h3>January 2026 Monthly Report <span class="badge">Latest</span></h3>
+                    <h3>January 1-19, 2026 Report <span class="badge">Latest</span></h3>
+                    <p class="date">Period: January 1-19, 2026</p>
+                </div>
+                <a href="gofreight_jan_1_19_2026_report.html" class="report-link">View Report</a>
+            </div>
+            <div class="report-item">
+                <div class="report-info">
+                    <h3>January 2026 Monthly Report (Jan 1-13)</h3>
                     <p class="date">Period: January 1-13, 2026</p>
                 </div>
                 <a href="gofreight_jan_2026_report.html" class="report-link">View Report</a>
