--- a/gofreight/glossary/bayport-container-terminal.html
+++ b/gofreight/glossary/bayport-container-terminal.html
@@ -8,11 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-blue: #0066CC;
-            --accent-blue: #0088FF;
-            --dark-text: #1a1a1a;
+            --primary-blue: #01aac1;
+            --accent-blue: #01d7f4;
+            --teal: #017d8e;
+            --dark-text: #111111;
+            --medium-gray: #2a2a2a;
             --body-text: #4a4a4a;
-            --light-gray: #f8f9fa;
+            --light-gray: #f5f5f5;
             --border-gray: #e5e7eb;
             --white: #ffffff;
         }
@@ -163,7 +165,7 @@
         }
 
         .definition-block {
-            background: linear-gradient(135deg, #f0f7ff 0%, #e8f4ff 100%);
+            background: linear-gradient(135deg, #e6f7f9 0%, #d4f3f7 100%);
             border-left: 4px solid var(--primary-blue);
             padding: 24px;
             border-radius: 0 8px 8px 0;
@@ -183,7 +185,7 @@
         }
 
         th {
-            background: var(--dark-text);
+            background: var(--medium-gray);
             color: var(--white);
             text-align: left;
             padding: 12px 16px;
@@ -244,7 +246,7 @@
 
         /* CTA Box */
         .cta-box {
-            background: linear-gradient(135deg, var(--primary-blue) 0%, #004499 100%);
+            background: linear-gradient(135deg, var(--primary-blue) 0%, var(--teal) 100%);
             color: var(--white);
             padding: 32px;
             border-radius: 12px;
@@ -652,7 +654,7 @@
                 </ul>
             </div>
 
-            <div class="sidebar-box" style="background: linear-gradient(135deg, #e0f2fe 0%, #bae6fd 100%);">
+            <div class="sidebar-box" style="background: linear-gradient(135deg, #e6f7f9 0%, #ccf0f5 100%);">
                 <h3>Need Help?</h3>
                 <p style="font-size: 14px; margin-bottom: 12px;">See how GoFreight automates container tracking across all major terminals.</p>
                 <a href="#" style="display: inline-block; background: var(--primary-blue); color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 600;">Schedule Demo</a>
