Add conversion widgets: G2 badge, customer result, feature spotlight, testimonial

--- a/gofreight/glossary/bayport-container-terminal.html
+++ b/gofreight/glossary/bayport-container-terminal.html
@@ -459,6 +459,20 @@
             </ul>
             <p>With Houston's strategic position serving the energy sector and manufacturing hubs across Texas and the Midwest, mastering Bayport operations is essential for any forwarder serving these markets.</p>
 
+            <!-- Inline Testimonial -->
+            <div style="background: var(--light-gray); border-radius: 12px; padding: 24px; margin: 32px 0; border-left: 4px solid var(--primary-blue);">
+                <div style="font-size: 16px; font-style: italic; color: var(--dark-text); line-height: 1.6; margin-bottom: 12px;">
+                    "These timely alerts help us avoid detention and demurrage, ensuring smoother operations. The user interface, with its intuitive charts and graphical representations, transformed how we viewed our data."
+                </div>
+                <div style="display: flex; align-items: center; gap: 12px;">
+                    <div style="width: 40px; height: 40px; background: var(--primary-blue); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600;">JP</div>
+                    <div>
+                        <div style="font-weight: 600; color: var(--dark-text);">Joseph Park</div>
+                        <div style="font-size: 13px; color: #666;">Founder, Seamax Freight International</div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Key Facts Table -->
             <h2>Bayport Container Terminal Key Facts</h2>
             <table>
@@ -619,6 +633,40 @@
 
         <!-- Sidebar -->
         <aside class="sidebar">
+            <!-- G2 Rating Badge -->
+            <div class="sidebar-box" style="background: linear-gradient(135deg, #fff 0%, #f0fdf4 100%); border: 1px solid #22c55e;">
+                <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
+                    <div style="background: #22c55e; color: white; font-size: 20px; font-weight: 700; padding: 8px 12px; border-radius: 8px;">4.8</div>
+                    <div>
+                        <div style="color: #f59e0b; font-size: 14px;">★★★★★</div>
+                        <div style="font-size: 12px; color: #666;">88 Reviews on G2</div>
+                    </div>
+                </div>
+                <div style="font-size: 13px; color: var(--body-text);">
+                    <strong>#1 Rated</strong> Freight Management Platform
+                </div>
+            </div>
+
+            <!-- Customer Result -->
+            <div class="sidebar-box" style="background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-left: 4px solid #f59e0b;">
+                <div style="font-size: 32px; font-weight: 700; color: var(--dark-text);">53%</div>
+                <div style="font-size: 14px; font-weight: 600; color: var(--dark-text); margin-bottom: 8px;">Reduction in Demurrage Costs</div>
+                <div style="font-size: 13px; color: #666; font-style: italic;">"GoFreight's tracking alerts help us avoid detention and demurrage."</div>
+                <div style="font-size: 12px; color: #888; margin-top: 8px;">— Jeff Lee, UCM</div>
+            </div>
+
+            <!-- Feature Spotlight -->
+            <div class="sidebar-box" style="border-left: 4px solid var(--primary-blue);">
+                <h3 style="color: var(--primary-blue);">Container Tracking</h3>
+                <ul style="font-size: 14px; padding-left: 16px; margin: 12px 0;">
+                    <li><strong>125+</strong> carrier integrations</li>
+                    <li>Real-time status updates</li>
+                    <li>Last Free Day alerts</li>
+                    <li>Customer portal access</li>
+                </ul>
+                <a href="#" style="display: inline-block; background: var(--primary-blue); color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none; font-size: 13px; font-weight: 600; margin-top: 8px;">See How It Works →</a>
+            </div>
+
             <div class="sidebar-box">
                 <h3>Quick Facts</h3>
                 <div class="key-fact">
@@ -654,10 +702,16 @@
                 </ul>
             </div>
 
-            <div class="sidebar-box" style="background: linear-gradient(135deg, #e6f7f9 0%, #ccf0f5 100%);">
-                <h3>Need Help?</h3>
-                <p style="font-size: 14px; margin-bottom: 12px;">See how GoFreight automates container tracking across all major terminals.</p>
-                <a href="#" style="display: inline-block; background: var(--primary-blue); color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 600;">Schedule Demo</a>
+            <!-- Final CTA -->
+            <div class="sidebar-box" style="background: linear-gradient(135deg, var(--primary-blue) 0%, var(--teal) 100%); color: white;">
+                <h3 style="color: white; margin-bottom: 8px;">Stop Manual Tracking</h3>
+                <p style="font-size: 14px; margin-bottom: 16px; opacity: 0.95;">GoFreight pulls status from Bayport and 125+ carriers automatically.</p>
+                <ul style="font-size: 13px; padding-left: 16px; margin: 0 0 16px 0; opacity: 0.9;">
+                    <li>Real-time LFD alerts</li>
+                    <li>Customer portal access</li>
+                    <li>4-8 week implementation</li>
+                </ul>
+                <a href="#" style="display: block; background: white; color: var(--teal); padding: 12px 16px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 600; text-align: center;">Get a Demo →</a>
             </div>
         </aside>
     </div>
