Improve sidebar: separate GoFreight widgets from terminal Quick Facts, add verified customer badge

--- a/gofreight/glossary/bayport-container-terminal.html
+++ b/gofreight/glossary/bayport-container-terminal.html
@@ -633,42 +633,9 @@
 
         <!-- Sidebar -->
         <aside class="sidebar">
-            <!-- G2 Rating Badge -->
-            <div class="sidebar-box" style="background: linear-gradient(135deg, #fff 0%, #f0fdf4 100%); border: 1px solid #22c55e;">
-                <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
-                    <div style="background: #22c55e; color: white; font-size: 20px; font-weight: 700; padding: 8px 12px; border-radius: 8px;">4.8</div>
-                    <div>
-                        <div style="color: #f59e0b; font-size: 14px;">★★★★★</div>
-                        <div style="font-size: 12px; color: #666;">88 Reviews on G2</div>
-                    </div>
-                </div>
-                <div style="font-size: 13px; color: var(--body-text);">
-                    <strong>#1 Rated</strong> Freight Management Platform
-                </div>
-            </div>
-
-            <!-- Customer Result -->
-            <div class="sidebar-box" style="background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-left: 4px solid #f59e0b;">
-                <div style="font-size: 32px; font-weight: 700; color: var(--dark-text);">53%</div>
-                <div style="font-size: 14px; font-weight: 600; color: var(--dark-text); margin-bottom: 8px;">Reduction in Demurrage Costs</div>
-                <div style="font-size: 13px; color: #666; font-style: italic;">"GoFreight's tracking alerts help us avoid detention and demurrage."</div>
-                <div style="font-size: 12px; color: #888; margin-top: 8px;">— Jeff Lee, UCM</div>
-            </div>
-
-            <!-- Feature Spotlight -->
-            <div class="sidebar-box" style="border-left: 4px solid var(--primary-blue);">
-                <h3 style="color: var(--primary-blue);">Container Tracking</h3>
-                <ul style="font-size: 14px; padding-left: 16px; margin: 12px 0;">
-                    <li><strong>125+</strong> carrier integrations</li>
-                    <li>Real-time status updates</li>
-                    <li>Last Free Day alerts</li>
-                    <li>Customer portal access</li>
-                </ul>
-                <a href="#" style="display: inline-block; background: var(--primary-blue); color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none; font-size: 13px; font-weight: 600; margin-top: 8px;">See How It Works →</a>
-            </div>
-
-            <div class="sidebar-box">
-                <h3>Quick Facts</h3>
+            <!-- Terminal Quick Facts - About the topic -->
+            <div class="sidebar-box" style="border: 2px solid var(--border-gray);">
+                <h3 style="color: var(--medium-gray); font-size: 12px; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 12px;">Terminal Quick Facts</h3>
                 <div class="key-fact">
                     <span class="key-fact-label">FIRMS Code</span>
                     <span class="key-fact-value">G431</span>
@@ -691,8 +658,8 @@
                 </div>
             </div>
 
-            <div class="sidebar-box">
-                <h3>Related Glossary Terms</h3>
+            <div class="sidebar-box" style="border: 2px solid var(--border-gray);">
+                <h3 style="color: var(--medium-gray); font-size: 12px; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 12px;">Related Glossary Terms</h3>
                 <ul>
                     <li><a href="#">Container Tracking</a></li>
                     <li><a href="#">Demurrage</a></li>
@@ -702,9 +669,66 @@
                 </ul>
             </div>
 
-            <!-- Final CTA -->
-            <div class="sidebar-box" style="background: linear-gradient(135deg, var(--primary-blue) 0%, var(--teal) 100%); color: white;">
-                <h3 style="color: white; margin-bottom: 8px;">Stop Manual Tracking</h3>
+            <!-- GOFREIGHT SECTION - Visually separated -->
+            <div style="margin: 32px 0 16px; padding-top: 16px; border-top: 2px dashed var(--primary-blue);">
+                <div style="font-size: 11px; text-transform: uppercase; letter-spacing: 1px; color: var(--primary-blue); font-weight: 700; margin-bottom: 16px;">Powered by GoFreight</div>
+            </div>
+
+            <!-- GoFreight G2 Rating Badge -->
+            <div class="sidebar-box" style="background: linear-gradient(135deg, #e6f7f9 0%, #d4f3f7 100%); border: 2px solid var(--primary-blue);">
+                <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 12px;">
+                    <span style="background: var(--primary-blue); color: white; font-size: 10px; font-weight: 700; padding: 3px 8px; border-radius: 4px; text-transform: uppercase;">GoFreight</span>
+                    <span style="font-size: 11px; color: #666;">on G2</span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+                    <div style="background: #22c55e; color: white; font-size: 20px; font-weight: 700; padding: 8px 12px; border-radius: 8px;">4.8</div>
+                    <div>
+                        <div style="color: #f59e0b; font-size: 14px;">★★★★★</div>
+                        <div style="font-size: 12px; color: #666;">88 Reviews</div>
+                    </div>
+                </div>
+                <div style="font-size: 13px; color: var(--body-text);">
+                    <strong>#1 Rated</strong> Freight Management Platform
+                </div>
+            </div>
+
+            <!-- GoFreight Verified Customer Result -->
+            <div class="sidebar-box" style="background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border: 2px solid #f59e0b;">
+                <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 12px;">
+                    <span style="background: #f59e0b; color: white; font-size: 10px; font-weight: 700; padding: 3px 8px; border-radius: 4px;">✓ VERIFIED</span>
+                    <span style="font-size: 11px; color: #92400e; font-weight: 600;">GoFreight Customer</span>
+                </div>
+                <div style="font-size: 32px; font-weight: 700; color: var(--dark-text);">53%</div>
+                <div style="font-size: 14px; font-weight: 600; color: var(--dark-text); margin-bottom: 8px;">Reduction in Demurrage Costs</div>
+                <div style="font-size: 13px; color: #666; font-style: italic; border-left: 3px solid #f59e0b; padding-left: 10px; margin: 12px 0;">"GoFreight's tracking alerts help us avoid detention and demurrage."</div>
+                <div style="display: flex; align-items: center; gap: 8px; margin-top: 12px;">
+                    <div style="width: 32px; height: 32px; background: #f59e0b; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 12px;">JL</div>
+                    <div>
+                        <div style="font-size: 13px; font-weight: 600; color: var(--dark-text);">Jeff Lee</div>
+                        <div style="font-size: 11px; color: #888;">Sales Manager, UCM</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- GoFreight Feature Spotlight -->
+            <div class="sidebar-box" style="background: white; border: 2px solid var(--primary-blue);">
+                <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 12px;">
+                    <span style="background: var(--primary-blue); color: white; font-size: 10px; font-weight: 700; padding: 3px 8px; border-radius: 4px; text-transform: uppercase;">GoFreight Feature</span>
+                </div>
+                <h3 style="color: var(--dark-text); margin-top: 0;">Container Tracking</h3>
+                <ul style="font-size: 14px; padding-left: 16px; margin: 12px 0;">
+                    <li><strong>125+</strong> carrier integrations</li>
+                    <li>Real-time status updates</li>
+                    <li>Last Free Day alerts</li>
+                    <li>Customer portal access</li>
+                </ul>
+                <a href="#" style="display: inline-block; background: var(--primary-blue); color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none; font-size: 13px; font-weight: 600; margin-top: 8px;">See How It Works →</a>
+            </div>
+
+            <!-- GoFreight Final CTA -->
+            <div class="sidebar-box" style="background: linear-gradient(135deg, var(--primary-blue) 0%, var(--teal) 100%); color: white; border: none;">
+                <div style="font-size: 10px; text-transform: uppercase; letter-spacing: 1px; opacity: 0.8; margin-bottom: 8px;">GoFreight TMS</div>
+                <h3 style="color: white; margin-bottom: 8px; margin-top: 0;">Stop Manual Tracking</h3>
                 <p style="font-size: 14px; margin-bottom: 16px; opacity: 0.95;">GoFreight pulls status from Bayport and 125+ carriers automatically.</p>
                 <ul style="font-size: 13px; padding-left: 16px; margin: 0 0 16px 0; opacity: 0.9;">
                     <li>Real-time LFD alerts</li>
